--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ body {
   position: absolute;
   bottom: 0px;
   background-size: cover;
-  viewBox="0 0 1440 320"
 
 }
 /* wave */
@@ -33,7 +32,6 @@ header {
   padding: 10px 10%;
   backdrop-filter: blur(5px);
   background-color: rgba(0, 0, 0, 0.423);
-
 }
 .wrapper {
   min-height: 100vh;
@@ -207,13 +205,16 @@ box-shadow: 0px 25px 27px -12px rgba(0, 0, 0, 0.55);
     }
     .hero-heading, .hero-image {
       flex-basis: 50vh;
-      align-items: center;
+      background-color: #ff0000;
     }
     .hero-heading {
       /* padding: 10%; */
     }
     .hero-heading h1 {
       font-size: 35px;
+    }
+    .wrapper-header {
+    
     }
     .hero-heading p {
       /* background-color: rgb(100, 88, 73); */
