--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@ box-shadow: 0px 25px 27px -12px rgba(0, 0, 0, 0.55);
     }
     .hero-heading, .hero-image {
       flex-basis: 50vh;
-      background-color: #ff0000;
+      /* background-color: #ff0000; */
     }
     .hero-heading {
       /* padding: 10%; */
