--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,7 @@ box-shadow: 0px 25px 27px -12px rgba(0, 0, 0, 0.55);
       flex-direction: column-reverse;
     }
     .hero-heading, .hero-image {
-      flex-basis: 50vh;
+      flex-basis: 50svh;
       /* background-color: #ff0000; */
     }
     .hero-heading {
