--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,6 @@ header nav .icons {
 .hero {
   display: flex;
   width: 100%;
-  max-height: 100svh;
 }
 .hero-heading, .hero-image {
   flex-basis: 50%;
@@ -164,6 +163,7 @@ h1 span {
 }
 @media screen and (max-width: 600px) {
   
+
   .right-nav ul {
         top: 100%;
         left: 0;
@@ -198,7 +198,9 @@ box-shadow: 0px 25px 27px -12px rgba(0, 0, 0, 0.55);
     header nav .icons {
         display: inline-flex;
     }
-
+    .wrapper {
+      max-height: 100svh;
+    }
     .hero {
       width: 100%;
       display: flex;
