--- a/css/style.css
+++ b/css/style.css
@@ -199,7 +199,8 @@ box-shadow: 0px 25px 27px -12px rgba(0, 0, 0, 0.55);
         display: inline-flex;
     }
     .wrapper {
-      max-height: 100svh;
+      display: flex;
+      flex-direction: column;
     }
     .hero {
       width: 100%;
