--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,9 @@ body {
   position: absolute;
   bottom: 0px;
   background-size: cover;
-
 }
 /* wave */
 .wrapper {
-
 }
 /* nav */
 header {
@@ -43,15 +41,15 @@ nav {
   width: 100%;
 }
 #check {
-    display: none;
+  display: none;
 }
 header nav .icons {
-    font-size: 24px;
-    color: #f0ece5;
-    display: none;
-    cursor: pointer;
-    position: absolute;
-    right: 5%;
+  font-size: 24px;
+  color: #f0ece5;
+  display: none;
+  cursor: pointer;
+  position: absolute;
+  right: 5%;
 }
 .left-nav a {
   font-size: 24px;
@@ -85,8 +83,9 @@ header nav .icons {
   display: flex;
   width: 100%;
 }
-.hero-heading, .hero-image {
-  flex-basis: 50%;
+.hero-heading,
+.hero-image {
+  flex-basis: 50vw;
   align-items: center;
   justify-content: center;
   flex-direction: column;
@@ -95,7 +94,7 @@ header nav .icons {
 .hero-heading {
   padding: 5%;
 }
-.hero-heading h1{
+.hero-heading h1 {
   color: #f0ece5;
   font-size: 55px;
   line-height: 1.1em;
@@ -130,7 +129,7 @@ h1 span {
   background-size: cover;
   object-fit: cover;
   background-position: center center;
-  background-image: url('../assets/img/maid1.jpg');
+  background-image: url("../assets/img/maid1.jpg");
 }
 .cta button {
   padding: 10px 20px;
@@ -157,72 +156,72 @@ h1 span {
 
 /* hero */
 @media screen and (max-width: 960px) {
-    header {
-        padding: 12px 5%;
-    }
+  header {
+    padding: 12px 5%;
+  }
 }
 @media screen and (max-width: 600px) {
-  
-
   .right-nav ul {
-        top: 100%;
-        left: 0;
-        display: flex;
-        flex-direction: column;
-        position: absolute;
-        width: 100%;
-        height: 0;
-        justify-content: space-evenly;
-        align-items: center;
-        overflow: hidden;
-        background-color: #161a30;
-        -webkit-box-shadow: 0px 25px 27px -12px rgba(0, 0, 0, 0.55);
--moz-box-shadow: 0px 25px 27px -12px rgba(0, 0, 0, 0.55);
-box-shadow: 0px 25px 27px -12px rgba(0, 0, 0, 0.55);
-      }
-      .right-nav ul li a {
-        color: #f0ece5;
-      }
-      #check:checked~.icons #menu-icon {
-        display: none;
-      }
-      #check:checked~.icons #close-icon {
-        display: block;
-      }
-      #check:checked~.right-nav ul {
-        height: 200px;
-      }
-    .icons #close-icon {
-        display: none;
-    }
-    header nav .icons {
-        display: inline-flex;
-    }
-    .wrapper {
-      display: flex;
-      flex-direction: column;
-    }
-    .hero {
-      width: 100%;
-      display: flex;
-      flex-direction: column-reverse;
-    }
-    .hero-heading, .hero-image {
-      flex-basis: 45vh;
-    }
+    top: 100%;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width: 100%;
+    height: 0;
+    justify-content: space-evenly;
+    align-items: center;
+    overflow: hidden;
+    background-color: #161a30;
+    -webkit-box-shadow: 0px 25px 27px -12px rgba(0, 0, 0, 0.55);
+    -moz-box-shadow: 0px 25px 27px -12px rgba(0, 0, 0, 0.55);
+    box-shadow: 0px 25px 27px -12px rgba(0, 0, 0, 0.55);
+  }
+  .right-nav ul li a {
+    color: #f0ece5;
+  }
+  #check:checked ~ .icons #menu-icon {
+    display: none;
+  }
+  #check:checked ~ .icons #close-icon {
+    display: block;
+  }
+  #check:checked ~ .right-nav ul {
+    height: 200px;
+  }
+  .icons #close-icon {
+    display: none;
+  }
+  header nav .icons {
+    display: inline-flex;
+  }
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+  .hero {
+    width: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .hero-heading,
+  .hero-image {
+    flex-basis: 45vh;
+    background-color: #ff0000;
+  }
 
-    .hero-heading h1 {
-      font-size: 35px;
-    }
-    .hero-heading p {
-      /* background-color: rgb(100, 88, 73); */
-      font-size: 14px;
-      text-align: justify;
-    }
-    .cta {
-      width: 280px;
-    }
-    .cta button {
-      font-size: 13px;
-    }
+  .hero-heading h1 {
+    font-size: 35px;
+  }
+  .hero-heading p {
+    /* background-color: rgb(100, 88, 73); */
+    font-size: 14px;
+    text-align: justify;
+  }
+  .cta {
+    width: 280px;
+  }
+  .cta button {
+    font-size: 13px;
+  }
 }
