--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   list-style-type: none;
   text-decoration: none;
 }
@@ -211,8 +211,7 @@ h1 span {
   }
   .hero-heading,
   .hero-image {
-    flex-basis: 390px 390px;
-    background-color: #ff0000;
+    flex-basis: 50vh;
   }
 
   .hero-heading h1 {
