--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
   list-style-type: none;
   text-decoration: none;
 }
@@ -10,7 +10,7 @@ body {
   background-color: #161a30;
 }
 /* wave */
-.wrapper svg {
+.hero svg {
   position: absolute;
   bottom: 0px;
   background-size: cover;
@@ -93,6 +93,10 @@ header nav .icons {
 }
 .hero-heading {
   padding: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .hero-heading h1 {
   color: #f0ece5;
@@ -209,12 +213,10 @@ h1 span {
     display: flex;
     flex-direction: column-reverse;
   }
-  .hero-image {
-  }
-  .hero-heading {
-    flex-basis: 50vh;
-  }
 
+.hero-heading, .hero-image {
+  flex-basis: 50vh;
+}
   .hero-heading h1 {
     font-size: 35px;
   }
