--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,12 @@ body {
   background-color: #161a30;
 }
 /* wave */
+
 .hero svg {
   position: absolute;
   bottom: 0px;
   background-size: cover;
+  z-index: 99;
 }
 /* wave */
 /* nav */
@@ -21,13 +23,13 @@ header {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 999;
+  z-index: 9999;
   background: transparent;
   width: 100%;
   display: flex;
   padding: 10px 10%;
   backdrop-filter: blur(5px);
-  background-color: rgba(0, 0, 0, 0.423);
+  background-color: rgba(0, 0, 0, 0.579);
 }
 nav {
   display: flex;
@@ -60,6 +62,7 @@ header nav .icons {
 .right-nav ul li {
   display: flex;
   align-items: center;
+  margin: 0 10px;
 }
 .right-nav ul li a:hover {
   color: #161a30;
@@ -71,6 +74,7 @@ header nav .icons {
   font-weight: 500;
   padding: 8px 24px;
   border-radius: 10px;
+  transition: .3s ease-in-out;
 }
 /* nav */
 
@@ -140,6 +144,11 @@ h1 span {
 }
 #selengkapnya {
   background-color: #f0ece5;
+  cursor: pointer;
+}
+#selengkapnya:hover {
+  transform: scale(1.1);
+  transition: .3s ease-in-out;
 }
 .cta { 
   width: 305px;
@@ -147,20 +156,132 @@ h1 span {
   justify-content: space-between;
 }
 
-
-/* .content article {
-  background-color: #bebebe;
+.content {
+  background-color: #161a30;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 5%;
+}
+.heading-content {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
-  height: 400px;
-} */
+  height: 10vh;
+}
+.heading-content h1 {
+  color: #f0ece5;
+  font-weight: 500;
+  font-size: 25px;
+}
+.wrapper-article {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 400px);
+  grid-template-rows: repeat(2, 250px);
+  padding: 50px;
+  gap: 50px;
+  background-color: #161a30;
+  justify-content: center;
+}
 
-/* hero */
+article {
+  background-color: #f0ece5;
+  border-radius: 5px 5px 30px 5px;
+  display: flex;
+}
+article:hover {
+  transform: scale(1.1);
+  transition: 0.3s ease-in-out;
+}
+.heading-content u {
+  border-radius: 5px;
+  margin-top: 5px;
+  width: 100px;
+  height: 5px;
+  background-color: #e89d1c;
+}
+article img {
+  object-fit: cover;
+  border-radius: 5px 0 0 5px;
+  height: 100%;
+  width: 40%;
+}
+.article-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 5%
+}
+.article-content u {
+  background-color: #e89d1c;
+  width: 50px;
+  height: 5px;
+  border-radius: 5px;
+  margin: 5px 0;
+}
+.article-content h3 {
+  font-size: 18px;
+}
+.article-content p {
+  font-size: 13px;
+}
+
+aside {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 999;
+}
+aside ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 50px;
+  height: 130px;
+  background-color: #e89d1c;
+  border-radius: 0 10px 10px 0;
+}
+
+aside ul li a i {
+  color: #161a30;
+  font-size: 30px;
+  transition: all 0.3s ease-in-out;
+}
+aside ul li a i:hover {
+  transform: scale(1.3);
+}
+
+
 @media screen and (max-width: 960px) {
   header {
     padding: 12px 5%;
   }
+
+  .wrapper-article {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 300px);
+    grid-template-rows: repeat(2, 250px);
+    padding: 50px;
+    gap: 50px;
+    background-color: #161a30;
+    justify-content: center;
+  }
 }
 @media screen and (max-width: 600px) {
+ 
   .right-nav ul {
     top: 100%;
     left: 0;
@@ -199,7 +320,6 @@ h1 span {
 
     display: flex;
     flex-direction: column;
-    background-color: #ff0000;
   }
   .hero {
     position: relative;
@@ -225,4 +345,11 @@ h1 span {
   .cta button {
     font-size: 13px;
   }
+
+
+  .wrapper-article {
+    grid-template-columns: repeat(1, 280px);
+    grid-template-rows: repeat(4, 250px);
+  }
+
 }
