--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,10 @@ body {
   background-size: cover;
   z-index: 99;
 }
+.hero svg path {
+  width: 100vw;
+  height: 100%;
+}
 /* wave */
 /* nav */
 header {
@@ -142,6 +146,7 @@ h1 span {
   border-radius: 15px;
   border: none;
   cursor: pointer;
+  transition: all .3s ease-in-out;
 }
 #hub:hover {
   background-color: #f0ece5;
@@ -156,6 +161,7 @@ h1 span {
   border-radius: 15px;
   border: none;
   cursor: pointer;
+  transition: all .3s ease-in-out;
 }
 #selengkapnya:hover {
   background-color: #e89d1c;
@@ -163,10 +169,9 @@ h1 span {
 }
 #selengkapnya:hover, #hub:hover {
   transform: scale(1.1);
-  transition: .3s ease-in-out;
 }
 .cta { 
-  width: 305px;
+  width: 310px;
   display: flex;
   justify-content: space-between;
 }
@@ -357,7 +362,7 @@ aside ul li a i:hover {
   .cta {
     width: 280px;
   }
-  .cta button {
+  #hub, #selengkapnya {
     font-size: 13px;
   }
 
