--- a/css/style.css
+++ b/css/style.css
@@ -52,11 +52,20 @@ header nav .icons {
   position: absolute;
   right: 5%;
 }
-
+.left-nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.left-nav i {
+  font-size: 24px;
+  color: #f0ece5;
+}
 .left-nav a {
   font-size: 24px;
   font-weight: 600;
   color: #f0ece5;
+  margin-left: 5px;
 }
 .right-nav ul {
   display: flex;
@@ -212,6 +221,19 @@ article {
   background-color: #f0ece5;
   border-radius: 5px 5px 30px 5px;
   display: flex;
+  /* position: relative; */
+}
+.article-content i {
+  position: absolute;
+
+  background-color: #000311;
+  padding: 5px;
+  border-radius: 0 0 5px 0;
+  left: -15px;
+  top: -15px;
+  color: #f0ece5;
+  font-size: 30px;  
+
 }
 article:hover {
   transform: scale(1.1);
@@ -231,6 +253,7 @@ article img {
   width: 40%;
 }
 .article-content {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -281,8 +304,19 @@ aside ul li a i {
 }
 aside ul li a i:hover {
   transform: scale(1.3);
+  color: #f0ece5;
 }
 
+footer {
+  display: flex;
+  flex-direction: column;
+}
+.box-footer {
+  border-bottom: solid 2px #f0ece5 ;
+  width: 100%;
+  height: 150px;
+  background-color: #101010;
+}
 
 @media screen and (max-width: 960px) {
   header {
@@ -365,11 +399,14 @@ aside ul li a i:hover {
   #hub, #selengkapnya {
     font-size: 13px;
   }
-
-
   .wrapper-article {
     grid-template-columns: repeat(1, 280px);
     grid-template-rows: repeat(4, 250px);
   }
-
+  .heading-content h1 {
+    font-size: 20px;
+  }
+  .heading-content u {
+    width: 70px;
+  }
 }
