--- a/css/style.css
+++ b/css/style.css
@@ -310,15 +310,14 @@ footer {
   flex-direction: column;
 }
 .box-footer {
-  padding: 0 10%;
+  padding: 20px 10%;
   align-items: center;
   display: flex;
   width: 100%;
-  height: 100px;
   background-color: #101010;
 }
 .start-footer {
-  background-color: #101010;
+  background-color: #181818;
   width: 100%;
   height: 100px;
 }
@@ -401,12 +400,22 @@ footer {
   .wrapper-article {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(2, 300px);
+    grid-template-columns: repeat(2, 280px);
     grid-template-rows: repeat(2, 250px);
     padding: 50px;
-    gap: 50px;
+    gap: 25px;
     background-color: #161a30;
     justify-content: center;
+  }
+  .start-wrapper i, .start-wrapper #brand {
+    font-size: 30px;
+  }
+  .center-footer ul {
+    gap: 10px;
+  }
+  .center-footer ul li a {
+    padding: 10px 20px;
+    font-size: 18px;
   }
 }
 @media screen and (max-width: 600px) {
@@ -484,4 +493,9 @@ footer {
   .heading-content u {
     width: 70px;
   }
+  .end-footer {
+    flex-direction: column;
+    gap: 10px;
+  }
+  
 }
