--- a/css/style.css
+++ b/css/style.css
@@ -493,9 +493,19 @@ footer {
   .heading-content u {
     width: 70px;
   }
+  .lokasi-wrapper span, .lokasi-wrapper p {
+    font-size: 14px;
+  }
+  .center-footer ul li a {
+    padding: 5px 10px;
+    font-size: 17px;
+  }
   .end-footer {
     flex-direction: column;
     gap: 10px;
+  }
+  .cr-wrapper .cr i, .cr-wrapper .cr span {
+    font-size: 14px;
   }
   
 }
