--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ h1 span {
   background-position: center center;
   background-image: url("../assets/img/maid1.jpg");
 }
-.cta button {
+.cta a {
   margin-top: 20px;
 }
 #hub {
@@ -237,7 +237,7 @@ article:hover {
   transform: scale(1.1);
   transition: 0.3s ease-in-out;
 }
-.heading-content u {
+.heading-content u, .slider-title u {
   border-radius: 5px;
   margin-top: 5px;
   width: 100px;
@@ -266,7 +266,7 @@ article img {
   border-radius: 5px;
   margin: 5px 0;
 }
-.article-content h3 {
+.article-content h3{
   font-size: 18px;
 }
 .article-content p {
@@ -386,12 +386,142 @@ footer {
   justify-content: center;
   align-items: center;
   gap: 10px;
-}
-.lokasi-wrapper span, .lokasi-wrapper p {
+}.lokasi-wrapper i {
   color: #f0ece5;
-  font-size: 25;
+  font-size: 25px;
+}
+.lokasi-wrapper p {
+  color: #f0ece5;
+  font-size: 15px;
 }
 
+.container-slider {
+  flex-direction: column;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f0ece5;
+  padding: 0 0 5% 0;
+  
+}
+.slider-title {
+  justify-content: center;
+  align-items: center;
+  height: 10vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 50px;
+}
+.slider-title h3 {
+  font-size: 25px;
+  font-weight: 500;
+}
+.slider-wrapper {
+  position: relative;
+  overflow: hidden;
+  width: 300px;
+  border-radius: 20px;
+  background-color: #00031100;
+  box-shadow: 5px 5px 19px 1px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 5px 5px 19px 1px rgba(0,0,0,0.75);
+  -moz-box-shadow: 5px 5px 19px 1px rgba(0,0,0,0.75);
+  
+}
+
+.slides-container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  overflow: hidden;
+  scroll-behavior: smooth;
+  list-style: none;
+  border-radius: 15px;
+  margin: 0;
+  padding: 0;
+}
+
+.slide-arrow {
+  position: absolute;
+  display: flex;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 4rem;
+  background-color: #a20000;
+  border: none;
+  width: 2rem;
+  padding: 0 5px;
+  cursor: pointer;
+  opacity: 1;
+  transition: opacity 100ms;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.slide-arrow i {
+  color: #f0ece5;
+}
+
+#slide-arrow-prev {
+  left: 0;
+  border-radius: 0 2rem 2rem 0;
+
+}
+
+#slide-arrow-next {
+  right: 0;
+  border-radius: 2rem 0 0 2rem;
+}
+
+.slide {
+  width: 100%;
+  height: 100%;
+  flex: 1 0 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header-slide {
+  height: 50%;
+  background-color: #e89d1c;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.slide-profile {
+  height: 400px;
+  width: 300px;
+  border-radius: 20px;
+}
+.profile-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  height: 150px;
+  background-color: #f0ece5;
+  border-radius: 100%;
+}
+.profile-image img {
+  width: 140px;
+  height: 140px;
+  border-radius: 100%;
+}
+.content-slide {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #161a30;
+  width: 100%;
+  height: 50%;
+}
+.content-slide span, .content-slide h2 {
+  color: #f0ece5;
+}
 @media screen and (max-width: 960px) {
   header {
     padding: 12px 5%;
@@ -507,5 +637,10 @@ footer {
   .cr-wrapper .cr i, .cr-wrapper .cr span {
     font-size: 14px;
   }
-  
+  .slider-wrapper {
+    width: 250px;
+  }
+  .container-slider {
+    padding-bottom: 10%;
+  }
 }
