--- a/css/style.css
+++ b/css/style.css
@@ -452,7 +452,7 @@ footer {
   top: 50%;
   transform: translateY(-50%);
   height: 4rem;
-  background-color: #a20000;
+  background-color: #e89d1c;
   border: none;
   width: 2rem;
   padding: 0 5px;
@@ -463,9 +463,12 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  -webkit-box-shadow: 0px 0px 24px -10px rgba(255, 255, 255, 1);
+-moz-box-shadow: 0px 0px 24px -10px rgba(255, 255, 255, 1);
+box-shadow: 0px 0px 24px -10px rgba(255, 255, 255, 1);
 }
 .slide-arrow i {
-  color: #f0ece5;
+  color: #000311;
 }
 
 #slide-arrow-prev {
@@ -489,7 +492,7 @@ footer {
 
 .header-slide {
   height: 50%;
-  background-color: #e89d1c;
+  background-color: #161a30;
   display: flex;
   justify-content: center;
   align-items: center;
